gcc/testsuite/rust/rustc/ui/parser/impl-item-fn-no-body-semantic-fail.rs
fn main() {}

struct X;

impl X {
    fn f(); // { dg-error "" "" { target *-*-* } }
}

